kubernetes/prometheus/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: prometheus
    app.kubernetes.io/instance: prometheus
  name: prometheus
