kubernetes/prometheus/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus-server
    app.kubernetes.io/instance: prometheus
spec:
  replicas: 1
  serviceName: prometheus-service
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
      annotations:
        # prometheus.io/scrape: "true"
        # prometheus.io/port: "9090"
        enable.version-checker.io/prometheus: "true"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      automountServiceAccountToken: true
      serviceAccountName: prometheus-sa
      containers:
        - name: prometheus
          imagePullPolicy: IfNotPresent
          image: prom/prometheus:v2.39.1
          securityContext:
            # runAsGroup: 65534
            # runAsUser: 65534
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            # seccompProfile:
            #   type: RuntimeDefault
            capabilities:
              drop:
                - all
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus_data/"
            - "--storage.tsdb.retention.time=100y"
            - "--web.enable-admin-api"
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 7Gi
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 4
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 30
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-pvc
              mountPath: /prometheus_data/
      # securityContext:
      #   fsGroup: 65534
      #   runAsGroup: 65534
      #   runAsNonRoot: true
      #   runAsUser: 65534
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        - name: prometheus-pvc
          persistentVolumeClaim:
            claimName: prometheus-pvc
