kubernetes/prometheus/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: prometheus
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
  labels:
    app.kubernetes.io/instance: prometheus
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: prometheus-server
  ports:
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: grpc
      protocol: TCP
      port: 10901
      targetPort: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-truenas
  namespace: prometheus
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
  labels:
    app.kubernetes.io/instance: prometheus-truenas
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: prometheus-truenas
  ports:
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: grpc
      protocol: TCP
      port: 10901
      targetPort: grpc
